Closed Bug 783736 Opened 13 years ago Closed 13 years ago

Navigating to MP3/MP4 URIs doesn't load native gecko media controls

Categories

(Core Graveyard :: File Handling, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-basecamp:+)

RESOLVED FIXED
mozilla17
blocking-basecamp +

People

(Reporter: cjones, Assigned: cjones)

Details

(Keywords: crash, reproducible)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #774599 +++ Putting in File Handling for now because I'm not 100% what's at fault. STR (1) Open b2g browser app (2) Load http://people.mozilla.com/~cjones/media.html (2) Click MP3 Currently the b2g process crashes, but that will be fixed by bug 774599. After that, it will be a no-op or error page or trigger a download. Where we can play back mp3/mp4, we should load the native controls.
Audio doesn't actually play back from within the browser, but that's another bug ...
Assignee: nobody → jones.chris.g
Attachment #653023 - Flags: review?(roc)
Comment on attachment 653023 [details] [diff] [review] Load in-gecko controls for media-plugin types Review of attachment 653023 [details] [diff] [review]: ----------------------------------------------------------------- We need to encapsulate the media-related decisions in nsContentUtils::FindInternalContentViewer into nsHTMLMediaElement...
Attachment #653023 - Flags: review?(roc) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: