Bug 783736: Load in-gecko controls for media-plugin types. r=roc